# apecast

./: .gitignore  Cargo.toml  README.md
src/: etherscan.rs  main.rs  search.rs  telegram.rs
src/exchanges/: binance.rs  crypto.rs  kraken.rs  mod.rs
src/monitor/: apecoin.rs  beincrypto.rs  coindesk.rs  cointelegraph.rs  cryptodaily.rs  mod.rs  newsbtc.rs  thrivecoin.rs  utoday.rs
src/snapshot/: mod.rs  model.rs  query.graphql  repository.rs  schema.graphql
src/storage/: mod.rs  model.rs  repository.rs
