[package]
name = "apecast"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE"
description = "A telegram bot for apes"
readme = "README.md"
repository = "https://github.com/maxpowel/apecast"
homepage = "https://github.com/maxpowel/apecast"

categories = ["command-line-utilities"]
keywords = ["ape", "apecoin", "crypto", "telegram", "bot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate"] }
wixet-bootstrap = { version = "1.0.0" }
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
futures = "0.3.28"
mongodb = { version = "2.5.0", features = ["tokio-runtime", "bson-chrono-0_4"] }
anyhow = { version = "1.0.71" }
teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls"] }
clap = { version = "4.3.4", features = ["derive", "env"] }
chrono = { version = "0.4.26", features=["serde"]}
serde = { version = "1.0.164", features = ["derive"] }
flume = "0.10.14"
serde-aux = "4.2.0"
graphql_client = "0.13.0"
scraper = "0.16.0"
crypto-com-exchange = "1.0.2"